[project]
name = "echovlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=16.1.0",
    "matplotlib>=3.10.8",
    "numpy>=1.21,<1.25",
    "opencv-python-headless==4.5.5.64",
    "pandas<2.2.0",
    "pydicom==2.3.1",
    "scikit-learn>=1.7.2",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers==4.57.0",
    "wandb>=0.23.1",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "rustbpe"
bindings = "pyo3"
python-source = "."
manifest-path = "rustbpe/Cargo.toml"

[dependency-groups]
dev = [
    "maturin>=1.9.4",
    "pytest>=8.0.0",
]
